Media queries para o header + adição das imagens para a página pessoal

--- a/main.html
+++ b/main.html
@@ -33,14 +33,18 @@
     </div>
     <section class="pessoal">
         <h1 id="area-pessoal">Pessoal;</h1>
+
         <div class="areas-pessoal">
-            <h1>teste</h1>
+            <h1>Quem sou eu</h1>
+            <img class="foto-pessoal" src="/img/fotopessoal.jpg" alt="">
         </div>
         <div class="areas-pessoal">
-            <h1>teste</h1>
+            <h1>Hobbies</h1>
+            <img class="foto-pessoal" src="/img/pepita.JPG" alt="">
         </div>
         <div class="areas-pessoal">
-            <h1>teste</h1>
+            <h1>Curiosidades</h1>
+            <img class="foto-pessoal" src="/img/paisagem.jpg" alt="">
         </div>
     </section>
 </body>
