--- a/main.html
+++ b/main.html
@@ -13,33 +13,43 @@
             <nav class="navbar">
                 <label for="navbar" class="logo"> <a href="#area-pessoal">SXNT.</a></label>
                 <ul>
-                    <li><a class="nav-item" href="#area-pessoal">ACADÊMICO</a></li>
-                    <li><a class="nav-item" href="">PROFISSIONAL</a></li>
+                    <li><a class="nav-item" href="/academico.html">ACADÊMICO</a></li>
+                    <li><a class="nav-item" href="/profissional.html">PROFISSIONAL</a></li>
                     <li><a class="nav-item" href="#area-contato">CONTATOS</a></li>
                 </ul>
             </nav>
             <div class="container">
-                    <img class="img-incio" src="/img/placeholder.JPG"  alt="sant">
+                <img class="img-incio" src="/img/placeholder.JPG"  alt="sant">
                 <div class="texto">
                     <p>FRONT END I - 2024.2</p>
                     <h1>Sant</h1>
                     <h1>Semeghini</h1>
                     <h2>Projeto - 1</h2>
-                    <p id="subtitulo">SAIBA MAIS &darr;</p>
+                    <p id="subtitulo"> <a href="#area-pessoal">SAIBA MAIS &darr;</a></p>
                     <br>
                 </div>
             </div>
         </header>
     </div>
-    <div class="pessoal">
-        <section class="pessoal" id="area-pessoal">
-            <h1 class="titulo" id="titulo-pessoal">Pessoal</h1>
-            <h2 class="titulo" id="subtitulo-pessoal">Quem sou eu?</h2>
+    <div class="pessoal" id="area-pessoal">
+        <section class="pessoal">
+            <h1 class="titulo" id="titulo-pessoal">Sobre mim</h1>
+            <h2 id="subtitulo-pessoal">Olá, me chamo Sant!</h2>
+
             <div class="texto-pessoal">
-            <p>Olá, Me chamo Sant!</p>
-            <p>Tenho 19 anos e no início de 2024 me mudei de Porto Velho - RO para São José - SC, onde, atualmente curso o segundo semestre de Análise e Desenvolvimento de Sistemas no Instituto Federal de Santa Catarina.</p>
+                <p class="paragrafo-pessoal">Em 13 de fevereiro de 2005, nasci em Curitiba - PR, porém,  aos 5 anos de idade me mudei para Porto Velho - RO, onde, junto com a minha família, estabeleci raízes e vivi até o início de 2024, quando decidi me mudar para o outro extremo do país, em busca de cursar uma faculdade. Agora, acompanhado apenas de uma pitbull, (que resgatei em junho desse ano), e um sonho, curso o segundo semestre de Análise e Desenvolvimento de Sistemas, no campus São José do Instituto Federal de Santa Catarina.
+                </p>
+
+                <p class="paragrafo-pessoal">Meus primeiros contatos com a programação foram em relação ao desenvolvimento de jogos, área pela qual me interessei por integrar diversos aspectos além da programação em si, como contagem de história, arte, design, e música, algumas das áreas “criativas” que eu desempenho no meu tempo livre e pretendo adequar a minha carreira futuramente. Além desses aspectos, também me interesso por viagens, culinária, colecionamento de discos de vinil e adesivos, reformas de casa e aparelhos eletrônicos e entre outras áreas diversas.
+                </p>
             </div>
-        <br>
+
+            <div class="imagens-pessoal">
+                <div class="item-p"><img class="imagem-item" src="/img/fotopessoal.jpg" alt="Sant Criança"></div>
+                <div class="item-p"><img class="imagem-item" src="/img/pepita.JPG" alt="Pepita"></div>
+                <div class="item-p" ><img class="imagem-item" src="/img/paisagem.jpg" alt="Campeche"></div>
+                <div class="item-p"><img class="imagem-item" src="/img/imgcampessoal.jpg" alt="minha camera"></div>
+            </div>
         </section>
     </div>
     <div class="footer">
