--- a/profissional.html
+++ b/profissional.html
@@ -29,21 +29,31 @@
     </div>
     <div class="texto-profissional" id="area-profissional">
         <section>
-            <div class="projetos">
+            <div class="experiencia">
                 <h1 class="titulo-paginas">Projetos Desenvolvidos</h1>
                 <p class="subtitulos-paginas">IFSC 2024</p>
-                <div class="projeto">
-                    <p>Robocode Godofredo </p>
-                </div>
-                <div class="projeto">
-                <p>Site responsivo em CSS e HTML</p>
+                <div class="projetos">
+                    <div class="projeto">
+                        <p>Robocode Godofredo </p>
+                        <a href="https://github.com/sx-nt/ico-robocode24"><img class="img-projeto" src="https://www.researchgate.net/profile/Laurence-Amaral/publication/320750190/figure/fig1/AS:555709500145664@1509502877743/Figura-1-Robocode-Batalha-entre-robos.png" alt="robocode"></a>
+                        <p>Programação em Java</p>
+                    </div>
+                    <div class="projeto">
+                    <p>Página pessoal</p>
+                    <a href="https://github.com/sx-nt/Projeto-Front-End-I"><img class="img-projeto" src="/img/capa p pessoal.png" alt="projeto front end"></a>
+                    <p>HTML e CSS</p>
+                    </div>
                 </div>
             </div>
-            <div class="projetos">
+            <div class="experiencia">
                 <h1 class="titulo-paginas">Projetos Adicionais</h1>
                 <p class="subtitulos-paginas">2023 - 2024</p>
-                <div class="projeto">
-                    <p>Magic Jump - Jogo básico em Scratch</p>
+                <div class="projetos">
+                    <div class="projeto">
+                        <p>Jogo Magic Jump</p>
+                        <a href="https://scratch.mit.edu/projects/802140361"><img class="img-projeto" src="/img/imgmagicjump.png" alt="projeto front end"></a>
+                        <p>Programação básica em Scratch</p>
+                    </div>
                 </div>
             </div>
         </section>
